--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Set up Jekyll
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: '2.7'  # Cài đặt Ruby, tùy thuộc vào yêu cầu của bạn
+        ruby-version: '3.1.0'  # Cập nhật lên Ruby version >= 3.1.0
 
     - name: Install dependencies
       run: |
